--- a/Pages/WLModify.cshtml
+++ b/Pages/WLModify.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container">
-
+    
     <div class="row">
         @if(Model.patient != null)
         {
@@ -38,9 +38,21 @@
             </div>
         }
     </div>
-    <br />
-    <br />
+    
+    <div class="row">
+        <div class="text-center">
+            <h4>@Model.waitingList.Comment</h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="text-center">
+            <h4>Added date: @Model.waitingList.AddedDate</h4>
+        </div>
+    </div>
 
+    <br />
+    <br />
+    
     <form method="post">
         <div class="row mb-5 g-5">
             <h2 class="text-center">Modify Waiting List Entry:</h2>
