--- a/Pages/ClinicSlotModify.cshtml
+++ b/Pages/ClinicSlotModify.cshtml
@@ -11,10 +11,10 @@
     <br />
     <br />
     <form method="post">
-        <div id="metaData">
-            <input id="txtWcDate" name="wcDateString" asp-for=@Model.wcDateString />
-            <input id="txtClinicianSelected" name="clinicianSelected" asp-for=@Model.clinicianSelected />
-            <input id="txtClinicSelected" name="clinicSelected" asp-for=@Model.clinicSelected />
+        <div id="metaData" hidden="true">
+            <input id="txtWcDate" name="wcDateString" asp-for=@Model.wcDateStr />
+            <input id="txtClinicianSelected" name="clinicianSelected" asp-for=@Model.clinicianSel />
+            <input id="txtClinicSelected" name="clinicSelected" asp-for=@Model.clinicSel />
         </div>
 
         <div class="row mb-5 g-5" hidden="true">
@@ -80,10 +80,9 @@
 
     function GoBack() 
     {
-        const wcDateString = document.getElementById("txtWcDate").value;
-        const clinicianSelected = document.getElementById("txtClinicianSelected").value;
-        const clinicSelected = document.getElementById("txtClinicSelected").value;
-        const wcDate = Date.parse(wcDateString);
+        const wcDateString = "@Model.wcDateStr";
+        const clinicianSelected = "@Model.clinicianSel";
+        const clinicSelected = "@Model.clinicSel";
         var returnUrl = "Index?wcDt=" + wcDateString;
         if (clinicianSelected != null)
         {
