I don't even remember what this was...

--- a/Pages/ClinicSlotModify.cshtml
+++ b/Pages/ClinicSlotModify.cshtml
@@ -11,11 +11,11 @@
     <br />
     <br />
     <form method="post">
-        <div id="metaData" hidden="true">
+        @*<div id="metaData" hidden="true">
             <input id="txtWcDate" name="wcDateString" asp-for=@Model.wcDateStr />
             <input id="txtClinicianSelected" name="clinicianSelected" asp-for=@Model.clinicianSel />
             <input id="txtClinicSelected" name="clinicSelected" asp-for=@Model.clinicSel />
-        </div>
+        </div>*@
 
         <div class="row mb-5 g-5" hidden="true">
             <input name="slotID" value=@Model.slotID />
