--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -490,7 +490,7 @@
                                                 else if (statusArray[k] == "Reserved")
                                                 {
                                                     document.getElementById(col.id).classList.add("reservedslot");
-                                                    strSlotDetail = statusArray[k] + " for " + pednumArray[k] + "</br>" + clinicianArray[k] + "</br>" +
+                                                    strSlotDetail = statusArray[k] + " for " + pedNameArray[k] + "</br>" + clinicianArray[k] + "</br>" +
                                                         clinicArray[k] + "</br>" + "<span hidden='true'>S:" + slotIDArray[k] + "</span>";
                                                 }
                                                 else if (statusArray[k] == "Booked")
