--- a/Pages/AppConfirm.cshtml
+++ b/Pages/AppConfirm.cshtml
@@ -14,11 +14,11 @@
         <h1 class="text-center">This patient does not exist.</h1>
     }
 
-    <div id="metaData" hidden="true">
+    @*<div id="metaData" hidden="true">
         <input id="txtWcDate" name="wcDateString" asp-for=@Model.wcDateStr />
         <input id="txtClinicianSelected" name="clinicianSelected" asp-for=@Model.clinicianSel />
         <input id="txtClinicSelected" name="clinicSelected" asp-for=@Model.clinicSel />
-    </div>
+    </div>*@
 
     <form id="ApptForm" method="post">
         <div class="row mb-5 g-5">
