--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/ClinicSetup">Clinic Setup</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ChoosePatient">Create Past Appointment</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Sign Out</a>
                         </li>
                     </ul>
